<resources>
  <string name="appName">Ledger</string>
  <string name="appName_debug">Ledger (Debug)</string>
  <string name="enum_queueSort_customerName">Customer name</string>
  <string name="enum_queueSort_date">Date</string>
  <string name="enum_queueSort_totalPrice">Total price</string>
  <string name="enum_customerSort_name">Name</string>
  <string name="enum_customerSort_balance">Balance</string>
  <string name="enum_productSort_name">Name</string>
  <string name="enum_productSort_price">Price</string>
  <string name="enum_queueDate_allTime">All time</string>
  <string name="enum_queueDate_today">Today</string>
  <string name="enum_queueDate_yesterday">Yesterday</string>
  <string name="enum_queueDate_thisWeek">This week</string>
  <string name="enum_queueDate_thisMonth">This month</string>
  <string name="enum_queueDate_thisYear">This year</string>
  <string name="enum_queueDate_custom" translatable="false">%s — %s</string>
  <string name="enum_queueStatus_inQueue">In queue</string>
  <string name="enum_queueStatus_inProcess">In process</string>
  <string name="enum_queueStatus_unpaid">Unpaid</string>
  <string name="enum_queueStatus_completed">Completed</string>
  <string name="enum_queuePaymentMethod_cash">Cash</string>
  <string name="enum_queuePaymentMethod_accountBalance">Account balance</string>
  <string name="enum_languageOption_englishUs">English (US)</string>
  <string name="enum_languageOption_indonesia">Indonesia</string>
  <string name="action_add">Add</string>
  <string name="action_cancel">Cancel</string>
  <string name="action_delete">Delete</string>
  <string name="action_denyAndQuit">Deny and quit</string>
  <string name="action_discardAndLeave">Discard and leave</string>
  <string name="action_edit">Edit</string>
  <string name="action_grant">Grant</string>
  <string name="action_new">New</string>
  <string name="action_ok">Ok</string>
  <string name="action_save">Save</string>
  <string name="action_withdraw">Withdraw</string>
  <string name="symbol_notAvailable">n/a</string>
  <string name="symbol_mDash" translatable="false">—</string>
  <string name="symbol_thousand">K</string>
  <string name="symbol_million">M</string>
  <string name="symbol_billion">B</string>
  <string name="symbol_trillion">T</string>
  <string name="main_storageAccessPermission">Storage access permission required</string>
  <string name="main_storageAccessPermission_description">
    <![CDATA[
      <p>
        This permission is required to ensure data persistence.
        Granting this permission allows the app to retain all data even after uninstallation.
        The data is stored inside <br/>
        \'/storage/emulated/0/Documents/.ledger/\'
      </p>
    ]]>
  </string>
  <string name="main_navigation_dashboard">Dashboard</string>
  <string name="main_navigation_queue">Queue</string>
  <string name="main_navigation_customer">Customer</string>
  <string name="main_navigation_product">Product</string>
  <string name="main_createNew">Create new</string>
  <string name="main_createNew_queue">Queue</string>
  <string name="main_createNew_customer">Customer</string>
  <string name="main_createNew_product">Product</string>
  <string name="settings">Settings</string>
  <string name="settings_general">General</string>
  <string name="settings_language">Language</string>
  <string name="settings_selectLanguage">Select language</string>
  <string name="dashboard_date_selectDate">Select date</string>
  <string name="dashboard_date_selectDateRange">Select date range</string>
  <string name="dashboard_date_customRange">Custom range</string>
  <string name="dashboard_summary">Summary</string>
  <string name="dashboard_totalQueues">Total queues</string>
  <string name="dashboard_uncompletedQueues">Uncompleted queues</string>
  <string name="dashboard_uncompletedQueues_oldestQueue_x">
    <![CDATA[
      <text>
        <tspan x=\"0\" dy=\"-0.5em\" style=\"font-size: %d;\">Oldest queue:</tspan>
        <tspan x=\"0\" dy=\"1.2em\" style=\"font-size: %d; \"font-weight: bold;\">%s</tspan>
      </text>
    ]]>
  </string>
  <string name="dashboard_activeCustomers">Active customers</string>
  <plurals name="dashboard_activeCustomers_n_queue">
    <item quantity="one"><![CDATA[<b>%d</b> queue]]></item>
    <item quantity="other"><![CDATA[<b>%d</b> queues]]></item>
  </plurals>
  <string name="dashboard_productsSold">Products sold</string>
  <plurals name="dashboard_productsSold_n_item">
    <item quantity="one"><![CDATA[<b>%s</b> item]]></item>
    <item quantity="other"><![CDATA[<b>%s</b> items]]></item>
  </plurals>
  <string name="dashboard_revenue">Revenue</string>
  <string name="dashboard_receivedIncome">Received income</string>
  <string name="dashboard_receivedIncome_description">From completed queues</string>
  <string name="dashboard_projectedIncome">Projected income</string>
  <string name="dashboard_projectedIncome_description">From any queues</string>
  <string name="dashboard_balance">Balance</string>
  <plurals name="dashboard_balance_from_n_customer">
    <item quantity="one"><![CDATA[From <b>%d</b> customer]]></item>
    <item quantity="other"><![CDATA[From <b>%d</b> customers]]></item>
  </plurals>
  <string name="dashboard_balance_note">*\u0020\u0020 Date filters have no effect on this balance overview.</string>
  <string name="dashboard_totalBalance">Total balance</string>
  <string name="dashboard_totalDebt">Total debt</string>
  <string name="dashboard_fetchAllQueueError" translatable="false">@string/queue_fetchAllQueueError</string>
  <string name="dashboard_fetchAllCustomerError" translatable="false">@string/customer_fetchAllCustomerError</string>
  <string name="dashboard_fetchAllProductError" translatable="false">@string/product_fetchAllProductError</string>
  <plurals name="queue_displaying_n_queue">
    <item quantity="one"><![CDATA[Displaying <b>%d</b> queue]]></item>
    <item quantity="other"><![CDATA[Displaying <b>%d</b> queues]]></item>
  </plurals>
  <string name="queue_sortBy">Sort by</string>
  <string name="queue_filters">Filters</string>
  <string name="queue_filters_min">Min</string>
  <string name="queue_filters_max">Max</string>
  <string name="queue_filterCustomer">Customer</string>
  <string name="queue_filterCustomer_showQueueWithNoCustomer">Show queue with no customer</string>
  <string name="queue_filterCustomer_filterCustomers">Filter customers</string>
  <string name="queue_filterDate">Date</string>
  <string name="queue_filterDate_customRange">Custom range</string>
  <string name="queue_filterDate_selectDateRange">Select date range</string>
  <string name="queue_filterStatus">Status</string>
  <string name="queue_filterTotalPrice">Total price</string>
  <string name="queue_card_customer">Customer</string>
  <string name="queue_card_queueId">Queue ID</string>
  <string name="queue_card_date">Date</string>
  <string name="queue_card_status">Status</string>
  <string name="queue_card_paymentMethod">Payment method</string>
  <string name="queue_card_productOrders_product">Product</string>
  <string name="queue_card_productOrders_quantity">Quantity</string>
  <string name="queue_card_productOrders_totalPrice">Total price</string>
  <string name="queue_card_productOrders_n_off" translatable="false">@string/createQueue_productOrders_n_off</string>
  <string name="queue_card_grandTotalPrice" translatable="false">@string/createQueue_productOrders_grandTotalPrice</string>
  <string name="queue_card_totalDiscount" translatable="false">@string/createQueue_productOrders_totalDiscount</string>
  <string name="queue_card_x_balance" translatable="false">@string/createQueue_productOrders_x_balance</string>
  <string name="queue_card_x_debt" translatable="false">@string/createQueue_productOrders_x_debt</string>
  <string name="queue_cardMenu_edit" translatable="false">@string/action_edit</string>
  <string name="queue_cardMenu_delete" translatable="false">@string/action_delete</string>
  <string name="queue_deleteQueueError">Error! Failed to delete queue</string>
  <string name="queue_fetchAllQueueError">Error! Unable to retrieve all queues</string>
  <plurals name="queue_deleted_n_queue">
    <item quantity="one">Deleted %d queue</item>
    <item quantity="other">Deleted %d queues</item>
  </plurals>
  <plurals name="customer_displaying_n_customer">
    <item quantity="one"><![CDATA[Displaying <b>%d</b> customer]]></item>
    <item quantity="other"><![CDATA[Displaying <b>%d</b> customers]]></item>
  </plurals>
  <string name="customer_sortBy" translatable="false">@string/queue_sortBy</string>
  <string name="customer_filters" translatable="false">@string/queue_filters</string>
  <string name="customer_filters_min" translatable="false">@string/queue_filters_min</string>
  <string name="customer_filters_max" translatable="false">@string/queue_filters_max</string>
  <string name="customer_filterBalance">Balance</string>
  <string name="customer_filterDebt">Debt</string>
  <string name="customer_card_name">Name</string>
  <string name="customer_card_customerId">Customer ID</string>
  <string name="customer_card_balance">Balance</string>
  <string name="customer_card_debt">Debt</string>
  <string name="customer_cardMenu_edit" translatable="false">@string/action_edit</string>
  <string name="customer_cardMenu_delete" translatable="false">@string/action_delete</string>
  <string name="customer_deleteCustomerError">Error! Failed to delete customer</string>
  <string name="customer_fetchAllCustomerError">Error! Unable to retrieve all customers</string>
  <plurals name="customer_deleted_n_customer" translatable="false">
    <item quantity="one">@string/_customer_deleted_n_customer_one</item>
    <item quantity="other">@string/_customer_deleted_n_customer_other</item>
  </plurals>
  <string name="_customer_deleted_n_customer_one">Deleted %d customer</string>
  <string name="_customer_deleted_n_customer_other">Deleted %d customers</string>
  <plurals name="product_displaying_n_product">
    <item quantity="one"><![CDATA[Displaying <b>%d</b> product]]></item>
    <item quantity="other"><![CDATA[Displaying <b>%d</b> products]]></item>
  </plurals>
  <string name="product_sortBy" translatable="false">@string/queue_sortBy</string>
  <string name="product_filters" translatable="false">@string/queue_filters</string>
  <string name="product_filters_min" translatable="false">@string/queue_filters_min</string>
  <string name="product_filters_max" translatable="false">@string/queue_filters_max</string>
  <string name="product_filterPrice">Price</string>
  <string name="product_card_name">Name</string>
  <string name="product_card_productId">Product ID</string>
  <string name="product_card_price">Price</string>
  <string name="product_cardMenu_edit" translatable="false">@string/action_edit</string>
  <string name="product_cardMenu_delete" translatable="false">@string/action_delete</string>
  <string name="product_deleteProductError">Error! Failed to delete product</string>
  <string name="product_fetchAllProductError">Error! Unable to retrieve all products</string>
  <string name="createQueue_status_selectStatus">Select status</string>
  <string name="createQueue_productOrders_makeProductOrders">Make product orders</string>
  <string name="createQueue_productOrders_product">Product</string>
  <string name="createQueue_productOrders_quantity">Quantity</string>
  <string name="createQueue_productOrders_discount">Discount</string>
  <string name="createQueue_productOrders_totalPrice">Total price</string>
  <string name="createCustomer">Create customer</string>
  <string name="createCustomer_name">Name</string>
  <string name="createCustomer_debt">Debt</string>
  <string name="createCustomer_balance">Balance</string>
  <string name="createCustomer_balance_add">Add balance</string>
  <string name="createCustomer_balance_withdraw">Withdraw balance</string>
</resources>