<?xml version="1.0" encoding="utf-8"?><!--
 ~ Copyright 2024 Robi
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~     http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
      android:id="@+id/dashboardFragment"
      android:icon="@drawable/icon_dashboard_checkable"
      android:menuCategory="secondary"
      android:title="@string/main_navigation_dashboard" />
  <item
      android:id="@+id/queueFragment"
      android:icon="@drawable/icon_assignment_checkable"
      android:menuCategory="secondary"
      android:title="@string/main_navigation_queue" />
  <item
      android:id="@+id/customerFragment"
      android:icon="@drawable/icon_person_checkable"
      android:menuCategory="secondary"
      android:title="@string/main_navigation_customer" />
  <item
      android:id="@+id/productFragment"
      android:icon="@drawable/icon_sell_checkable"
      android:menuCategory="secondary"
      android:title="@string/main_navigation_product" />
</menu>
