<?xml version="1.0" encoding="utf-8"?><!--
 ~ Copyright 2024 Robi
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~     http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/bottomdialog_paddingbottom">

  <com.google.android.material.bottomsheet.BottomSheetDragHandleView
      android:id="@+id/dragHandle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

  <TextView
      android:id="@+id/title"
      style="@style/BottomSheetDialog.Title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/main_createNew" />

  <com.google.android.material.divider.MaterialDivider
      style="@style/Divider"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/createQueueButton"
      style="@style/BottomSheetDialog.Button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/main_createNew_queue"
      app:icon="@drawable/icon_assignment" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/createCustomerButton"
      style="@style/BottomSheetDialog.Button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/main_createNew_customer"
      app:icon="@drawable/icon_person" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/createProductButton"
      style="@style/BottomSheetDialog.Button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/main_createNew_product"
      app:icon="@drawable/icon_sell" />
</LinearLayout>
