<?xml version="1.0" encoding="utf-8"?><!--
 ~ Copyright 2024 Robi
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~     http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_scrollFlags="enterAlways"
      app:menu="@menu/reusable_toolbar_edit"
      app:navigationIcon="@drawable/icon_arrow_back"
      app:title="@string/createCustomer" />

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/screen_paddingbottom"
        android:orientation="vertical">

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/nameLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/screen_padding"
          android:layout_marginTop="@dimen/textinput_margintop"
          android:layout_marginEnd="@dimen/screen_padding"
          android:hint="@string/createCustomer_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionSend"
            android:inputType="text|textNoSuggestions"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            app:backgroundTint="@android:color/transparent" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/balanceLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/screen_padding"
          android:layout_marginTop="@dimen/textinput_margintop"
          android:layout_marginEnd="@dimen/screen_padding"
          android:hint="@string/createCustomer_balance">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            app:backgroundTint="@android:color/transparent" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/debtLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/screen_padding"
          android:layout_marginTop="@dimen/textinput_margintop"
          android:layout_marginEnd="@dimen/screen_padding"
          android:hint="@string/createCustomer_debt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/debt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            app:backgroundTint="@android:color/transparent" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.button.MaterialButton
          android:id="@+id/addBalanceButton"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/screen_padding"
          android:layout_marginTop="30dp"
          android:layout_marginEnd="@dimen/screen_padding"
          android:padding="@dimen/button_padding"
          android:text="@string/createCustomer_balance_add"
          android:textColor="?colorOnPrimary"
          app:backgroundTint="?colorPrimary"
          app:rippleColor="@color/primary_ripple" />

      <com.google.android.material.button.MaterialButton
          android:id="@+id/withdrawButton"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/screen_padding"
          android:layout_marginEnd="@dimen/screen_padding"
          android:padding="@dimen/button_padding"
          android:text="@string/createCustomer_balance_withdraw"
          android:textColor="?colorOnSecondary"
          app:backgroundTint="?colorSecondary"
          app:rippleColor="@color/secondary_ripple" />
    </LinearLayout>
  </androidx.core.widget.NestedScrollView>
</LinearLayout>
