<?xml version="1.0" encoding="utf-8"?><!--
 ~ Copyright 2024 Robi
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~     http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <TextView
      android:id="@+id/generalTitle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/bottomdialog_title_margin"
      android:enabled="false"
      android:paddingStart="@dimen/screen_padding"
      android:paddingEnd="@dimen/screen_padding"
      android:paddingBottom="@dimen/bottomdialog_title_abovebutton_marginbottom"
      android:text="@string/settings_general"
      android:textSize="@dimen/text_small"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@+id/languageLayout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <LinearLayout
      android:id="@+id/languageLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?selectableItemBackground"
      android:clickable="true"
      android:orientation="vertical"
      android:paddingStart="@dimen/screen_padding"
      android:paddingTop="@dimen/button_padding"
      android:paddingEnd="@dimen/screen_padding"
      android:paddingBottom="@dimen/button_padding"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/generalTitle">

    <TextView
        android:id="@+id/languageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_language"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/enum_languageOption_englishUs"
        android:textSize="@dimen/text_small" />
  </LinearLayout>
</merge>