<?xml version="1.0" encoding="utf-8"?><!--
 ~ Copyright 2024 Robi
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~     http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingStart="20dp"
      android:paddingTop="20dp"
      android:paddingEnd="20dp"
      android:paddingBottom="10dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/createQueue_productOrders_makeProductOrders"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/productLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textinput_margintop"
        android:hint="@string/createQueue_productOrders_product"
        app:layout_constraintTop_toBottomOf="@id/title">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/product"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:cursorVisible="false"
          android:focusable="false"
          android:imeOptions="actionSend"
          android:paddingStart="0dp"
          android:paddingEnd="0dp"
          app:backgroundTint="@android:color/transparent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quantityLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textinput_margintop"
        android:hint="@string/createQueue_productOrders_quantity"
        app:layout_constraintTop_toBottomOf="@id/productLayout">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/quantity"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:digits="0123456789,."
          android:imeOptions="actionSend"
          android:inputType="numberDecimal"
          android:paddingStart="0dp"
          android:paddingEnd="0dp"
          app:backgroundTint="@android:color/transparent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/discountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textinput_margintop"
        android:hint="@string/createQueue_productOrders_discount"
        app:layout_constraintTop_toBottomOf="@id/quantityLayout">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/discount"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:imeOptions="actionSend"
          android:inputType="number"
          android:paddingStart="0dp"
          android:paddingEnd="0dp"
          app:backgroundTint="@android:color/transparent" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/totalPriceTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="end"
        android:text="@string/createQueue_productOrders_totalPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/discountLayout"
        app:layout_constraintWidth_percent="0.45" />

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/totalPriceTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/totalPriceTitle"
        app:layout_constraintTop_toTopOf="@id/totalPriceTitle" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
